# DBBS_reviewer_recommendations

./: .gitignore  README.md
.github/workflows/: packaging.yml
dbbs-faculty-match/: .gitignore  README.md  index.html  package-lock.json  package.json
dbbs-faculty-match/python/: embedding_helper.py  requirements.txt
dbbs-faculty-match/python/app/: README.md
dbbs-faculty-match/scripts/: build-sidecars.mjs  create-dmg.mjs  prepare-python.mjs  run-tauri.mjs  setfile-shim.cjs
dbbs-faculty-match/src/: App.css  App.tsx  main.tsx
dbbs-faculty-match/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
dbbs-faculty-match/src-tauri/assets/: default_faculty_dataset.tsv
dbbs-faculty-match/src-tauri/capabilities/: default.json
dbbs-faculty-match/src-tauri/icons/: icon.icns
dbbs-faculty-match/src-tauri/resources/: .gitkeep  README.txt
dbbs-faculty-match/src-tauri/src/: lib.rs  main.rs
tauri-gui/: README.md  package-lock.json  package.json
tauri-gui/src/: App.css  App.tsx  tauriBridge.ts
tauri-gui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-gui/src-tauri/assets/: default_faculty_dataset.tsv
tauri-gui/src-tauri/src/: lib.rs
