[package]
name = "dbbs-faculty-match"
version = "0.1.0"
description = "DBBS Faculty Match desktop application"
authors = ["Dennis Goldfarb"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dbbs_faculty_match_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-dialog = "2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
calamine = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
docx-rs = "0.4"
pdf-extract = "0.9"
rtf-parser = "0.4"

